tests/snapshots/binds__bind_set_preview_cmd@002.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo initial {} --bind ctrl-a:set-preview-cmd(echo new {})\nafter:\n  @ctrl 'a'"
---
"                                        │new a                                  "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"  b                                     │                                       "
"> a                                     │                                       "
"  3/3                                0/0│                                       "
">                                       │                                       "
cursor: (24, 3)
