tests/snapshots/binds__bind_set_preview_cmd@003.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --preview echo initial {} --bind ctrl-a:set-preview-cmd(echo new {})\nafter:\n  @key Up"
---
"                                        │new b                                  "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"> b                                     │                                       "
"  a                                     │                                       "
"  3/3                                1/0│                                       "
">                                       │                                       "
cursor: (24, 3)
